# tesseract-pipeline-harness

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  box.config.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.tesseract/: README.md
.tesseract/2026-07-11_stocks-learning-roadmap/: output.md  trace.md
.tesseract/operator-profile/: OPERATOR.md  profile.md
docs/: OVERVIEW.md
examples/: README.md  llm_planner_example.py  llm_worker_example.py
examples/01_market_brief/: output.md  task.json  task.md  tesseract.json  trace.md
examples/02_software_release/: output.md  task.json  tesseract.json  trace.md
examples/03_data_pipeline/: output.md  task.json  tesseract.json  trace.md
examples/04_book_chapter/: output.md  task.json  tesseract.json  trace.md
examples/05_bulk_translation/: output.md  task.json  tesseract.json  trace.md
examples/06_quick_fix/: output.md  task.json  tesseract.json  trace.md
harness/: 00_ontology.md  01_self_design.md  02_the_box.md  03_trace_protocol.md  box.config.md
templates/: task.md  trace.md
tesseract_pipeline/: __init__.py  __main__.py  axes.py  box.py  cli.py  executor.py  infer.py  llm.py  node.py  planner.py  render.py  trace.py  verify.py  worker.py
tests/: test_end_to_end.py  test_examples.py  test_executor.py  test_infer.py  test_llm.py  test_planner.py  test_verify.py
tools/: render_tesseract.py
(+9 files in other folders)
